Text change updated - placeholder

--- a/public/app/partials/evezplace/browse/classifieds/classified_details.html
+++ b/public/app/partials/evezplace/browse/classifieds/classified_details.html
@@ -60,7 +60,7 @@
         <div class="row">
             <div class="col-sm-12">
                 <textarea class="form-control" rows="3"
-                          placeholder="Explain your interest/conditions/any other feedback related to the classified"
+                          placeholder="Explain your interest/conditions/any other feedback related to ads & campaigns"
                           ng-model="formData.classifiedFeedback" style="margin-bottom: 10px;"></textarea>
             </div>
         </div>
