route clash for product line - fixed
show all from store front not working - fixed

--- a/public/app/partials/evezplace/browse/store/store_front.html
+++ b/public/app/partials/evezplace/browse/store/store_front.html
@@ -87,7 +87,7 @@
                             <h5>{{productLine.title}} </h5>
                         </div>
                         <div class="col-sm-3" style="padding-right: 0px">
-                            <a href="#store/productline/{{productLine.id}}" class="btn btn-link pull-right">Show All <span
+                            <a href="#productline/{{productLine.id}}/{{PageSource}}" class="btn btn-link pull-right">Show All <span
                                     class="fa fa-angle-right fa-2x pull-right"></span></a>
                         </div>
                     </div>
