--- a/public/app/partials/evezplace/manage/store/store_info.html
+++ b/public/app/partials/evezplace/manage/store/store_info.html
@@ -21,6 +21,21 @@
 <!--psyment offer-->
 <div class="col-sm-9 no-padding" ng-controller="CreateStoreController">
 
+    <div class="col-sm-12"  ng-show="storeStatus == 8">
+        <div class="row">
+            <div class="create-store-section">
+                <div style="border: 1px solid #E50880; border-radius: 5px;">
+                    <div class="row">
+                        <h4 class="text-center" style="color:#E50880">Subscription offer info</h4><br>
+                        <div class="col-md-12 col-xs-12">
+                            <p style="padding:0px 12px 0px 12px;">Your store subscription request is under processing, you will receive an mail from Evezown admin regarding the store subscription offer.</p>      
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div class="col-sm-12"  ng-show="Subscription_offer.length > 0 && storeStatus == 6 && Subscription_type == 1">
         <div class="row">
             <div class="create-store-section">
