--- a/public/app/partials/profile/buyHistory.html
+++ b/public/app/partials/profile/buyHistory.html
@@ -5,12 +5,8 @@
             <li>
                 <a href="#profile/myprofile/{{userId}}" class="{{isActive[0]}}" ng-class="{ active: isActive('/profile')}">Mysite</a>
             </li>
-            
-            <li ng-if="loggedInUserId == currentUserId">
-                <a href="#mystores/{{userId}}" class="{{isActive[1]}}" ng-class="{ active: isActive('/mystores/{{userId}}')}">Stores</a>
-            </li>
-            <li ng-if="loggedInUserId != currentUserId">
-                <a href="#community" class="{{isActive[1]}}" ng-class="{ active: isActive('/community')}">Build Community</a>
+            <li>
+                <a href="#buyHistory/{{userId}}" class="{{isActive[1]}}" ng-class="{ active: isActive('/buyHistory/{{userId}}')}">Buy History</a>
             </li>
             <li ng-class="{ active: isActive('/explore')}">
                 <!-- Template which needs to be shown on click -->
@@ -39,38 +35,30 @@
 </nav>
 <div class="col-md-12" ng-controller="profileCtrl">
     <div class="row user-menu-container square">
-        <div class="row cover-section custom-profile-covers">
+        <!-- <div class="row cover-section custom-profile-covers">
             <div class="col-md-4 small-cover-pic">
                 <div class="small-cover-pic-top">
                     <div>
                         <img ng-src="{{leftCoverImage}}" src="http://placehold.it/393x220"
                              class="img-responsive thumbnail"/>
-                        <!--<img ng-src="http://www.turquoiseandgold.com/images/store_bng1.jpg" class="img-responsive" alt=""/>-->
                     </div>
                 </div>
                 <div class="small-cover-pic-bottom">
                     <img ng-src="{{bottomCoverImage}}" src="http://placehold.it/393x220"
                          class="img-responsive thumbnail"/>
-                    <!--<img ng-src="http://alphacityguides.com/sites/default/files/1281558593/10030175813_9260a60d14_k.jpg"-->
-                    <!--class="img-responsive" alt=""/>-->
                 </div>
             </div>
             <div class="col-md-8 large-cover-pic custom-user-right-coverpic">
                 <img ng-src="{{rightCoverImage}}" src="http://placehold.it/803x452"
                      class="img-responsive thumbnail"/>
-                <!--<img ng-src="http://alphacityguides.com/sites/default/files/1281558593/10030175813_9260a60d14_k.jpg"-->
-                <!--class="img-responsive" alt=""/>-->
-                <!--<button class="btn btn-primary btn-sm btn-cover-pic-left"><span class="fa fa-camera"></span> Change Pic-->
-                <!--</button>-->
-
             </div>
-        </div>
+        </div> -->
         <div class="col-md-12 user-details">
             <div class="row coralbg white custom-profile-userpic">
 
                 <div class="col-md-3 top-margin">
                     <div class="user-image biothumb">
-                        <img ng-src="{{currentProfileImage}}" src="http://placehold.it/300x450"
+                        <img ng-src="{{currentProfileImage}}" src="http://placehold.it/293x220"
                              class="img-responsive thumbnail" />
                     </div>
                 </div>
