--- a/public/app/profile.css
+++ b/public/app/profile.css
@@ -52,7 +52,7 @@ margin-bottom: 4px;
 div.user-menu-container {
     z-index: 10;
     background-color: #fff;
-    margin-top: 20px;
+    /*margin-top: 20px;*/
     background-clip: padding-box;
     /*opacity: 0.97;
     filter: alpha(opacity=97);*/
