order fixes and laravel logger

--- a/public/app/partials/evezplace/browse/store/place-order.html
+++ b/public/app/partials/evezplace/browse/store/place-order.html
@@ -551,11 +551,11 @@ box-shadow: 0 1px 3px rgba(0,0,0,0.1);padding:0px;
                             </div>
                             <div class="col-md-12">
                                 <input type="text" ng-model="orderData.billing_address.address_line2"
-                                       class="form-control" placeholder="(Optional)"/>
+                                       class="form-control" required/>
                             </div>
                             <div class="col-md-12">
                                 <input type="text" ng-model="orderData.billing_address.address_line3"
-                                       class="form-control" placeholder="(Optional)"/>
+                                       class="form-control" required/>
                             </div>
                             <div class="col-md-12">
                                 <input type="text"
@@ -605,11 +605,11 @@ box-shadow: 0 1px 3px rgba(0,0,0,0.1);padding:0px;
                             <div class="col-md-12">
                                 <input ng-model="orderData.shipping_address.address_line2"
                                        type="text"
-                                       class="form-control" placeholder="(Optional)"/>
+                                       class="form-control" required/>
                             </div>
                             <div class="col-md-12">
                                 <input ng-model="orderData.shipping_address.address_line3"
-                                        type="text" class="form-control" placeholder="(Optional)"/>
+                                        type="text" class="form-control" required/>
                             </div>
                             <div class="col-md-12">
                                 <input type="text"
