Store status update

--- a/public/app/partials/evezplace/manage/store/stock_management.html
+++ b/public/app/partials/evezplace/manage/store/stock_management.html
@@ -231,8 +231,8 @@
                 <!--</li>-->
             <!--</ul>-->
         <!--</script>-->
-        <p class="pull-right">{{products.length}} of {{productCount}} products added (<a
-                href=""><span style="color: #e51385">upgrade</span></a> to add more)</p>
+        <!-- <p class="pull-right">{{products.length}} of {{productCount}} products added (<a
+                href=""><span style="color: #e51385">upgrade</span></a> to add more)</p> -->
         </div>
         </div>
         </div>
