--- a/public/app/partials/evezplace/browse/store/store_front.html
+++ b/public/app/partials/evezplace/browse/store/store_front.html
@@ -44,7 +44,7 @@
                             <a ng-if="isStoreOwner" href="#store/{{storefront.id}}/manage/store_info" class="btn btn-primary btn-sm pull-right">Manage store</a>
                         </div>
                             <div class="col-md-2" style="padding:0px;">
-                            <a ng-if="isStoreOwner" ng-click="PublishStore(storefront.id)" class="btn btn-primary btn-sm pull-right">Publish store</a>
+                            <a ng-if="isStoreOwner" ng-click="PublishStore(storefront.id)" class="btn btn-primary btn-sm pull-right">Publish Request</a>
                                 </div>
                         </div>
                     </div>
