buy history, profile menu, pricelist
buy history default msg added, profile menu rearranged, home page
responsive, price list link disabled

--- a/public/app/partials/evezplace/create_browse_partial.html
+++ b/public/app/partials/evezplace/create_browse_partial.html
@@ -1,4 +1,4 @@
-<div class="create-browse-section" ng-controller="createBrowseController">
+<div class="container-fluid create-browse-section" ng-controller="createBrowseController">
     <div class="row" id="store-button-section" ng-if="!isClassified">
         
         <div class="col-md-4 col-xs-12">
