--- a/public/app/partials/evezplace/home.html
+++ b/public/app/partials/evezplace/home.html
@@ -1,11 +1,11 @@
 <!-- Main component for a primary marketing message or call to action -->
 <!--description text-->
 <!-- Main component for a primary marketing message or call to action -->
-<div id="myCarousel" class="carousel slide carousel-fade" data-ride="carousel" data-interval="30000" style="background-color:#FFFFFF">
+<div id="myCarousel" class="container-fluid carousel slide carousel-fade" data-ride="carousel" data-interval="30000" style="background-color:#FFFFFF">
 
     <!-- Wrapper for slides -->
     <div class="jumbotron home-jumbotron"
-         ng-show="caption" id="no-border-round" ng-controller="HomeController" style="padding:10px 10px 10px 10px;background-color:#FFFFFF;border: 1px solid #CFCFCE;margin-bottom:4px;">
+         ng-show="caption" id="no-border-round" ng-controller="HomeController" style="padding:4px 4px 4px 4px;background-color:#FFFFFF;border: 1px solid #CFCFCE;margin-bottom:4px;">
         <div class="carousel-inner"
              ng-intro-options="IntroOptions" ng-intro-method="CallMe"
              ng-intro-oncomplete="CompletedEvent" ng-intro-onexit="ExitEvent"
@@ -14,21 +14,21 @@
              
             <!-- To be shown if not logged in -->
             <div class="col-md-12" ng-hide="loggedIn" style="padding:0px;">
-                <div class="col-md-4" >
+                <div class="col-md-4">
                 <a href="#profile/{{userId}}" style="text-decoration:none;"><h1 style="font-size:22px;margin-bottom:10px;margin-top:10px;background-color:#FFFFFF;" id="step1" data-target="#step1" data-toggle="tab" data-slide-to="0">{{LandingCaptions[0].description}}</h1></a>
                 <p style="text-align: justify;word-break: break-all;font-size:15px;">
                     <img src="img/mysite.jpg" class="description-img" width="150" height="90" style="border: 2px solid #FFFFFF;"/>
                     {{LandingCaptions[3].description}}</p>
                 </div>
 
-                <div class="col-md-4" >
+                <div class="col-md-4">
                 <a href="#evezplace" style="text-decoration:none;"><h1 style="font-size:22px;margin-bottom:10px;margin-top:10px;background-color:#FFFFFF" id="step2" data-target="#step2" data-toggle="tab" data-slide-to="1">{{LandingCaptions[1].description}}</h1></a>
                 <p style="text-align: justify;word-break: break-all;font-size:15px;">
                     <img src="img/market_place.jpg" class="description-img" width="150" height="80" style="border: 2px solid #FFFFFF;"/>
                     {{LandingCaptions[4].description}}</p>
                 </div>
 
-                <div class="col-md-4" >
+                <div class="col-md-4">
                 <a href="#wopportunity" style="text-decoration:none;"><h1 style="font-size:22px;margin-bottom:10px;margin-top:10px;background-color:#FFFFFF" id="step3" data-target="#step3" data-toggle="tab" data-slide-to="2">{{LandingCaptions[2].description}}</h1></a>
                 <p style="text-align: justify;word-break: break-all;font-size:15px;">
                     <img src="img/jobs.jpg" class="description-img" width="150" height="90" style="border: 2px solid #FFFFFF;"/>
@@ -79,13 +79,14 @@
 <div ng-include src='"partials/evezplace/create_browse_partial.html"'></div>
 
 
-<div ng-include src='"partials/evezplace/promotion_partial.html"'></div>
+<div class="container-fluid" ng-include src='"partials/evezplace/promotion_partial.html"'></div>
 
 
-
-<div class="row">
-    <div ng-include src='"partials/evezplace/products_partial.html"'></div>
-    <div ng-include src='"partials/evezplace/article_news_interviews_partial.html"'></div>
+<div class="container-fluid">
+    <div class="row">
+        <div ng-include src='"partials/evezplace/products_partial.html"'></div>
+        <div ng-include src='"partials/evezplace/article_news_interviews_partial.html"'></div>
+    </div>
 </div>
 
 <div class="col-md-12 hidden-xs" ng-include src='"partials/evezplace/product_menu.html"'
