--- a/public/app/partials/profile/buyHistory.html
+++ b/public/app/partials/profile/buyHistory.html
@@ -94,7 +94,13 @@
         </div>
 
         <div class="col-lg-10 col-md-10 col-sm-10 bhoechie-tab">
-                <!-- flight section -->
+                <!-- Empty -->
+                <div class="empty-section text-center" ng-if="getBuyHistory.length == 0">
+                    <span class="fa fa-exclamation-circle" style="color: #e50880; font-size: 64px;"></span>
+
+                    <h3 style="font-weight: 200">We can't seem to find any specials for this category around here</h3>
+                </div>
+                <!-- flight section -->    
                 <div class="bhoechie-tab-content active" ng-controller="orderCtrl" ng-if="getBuyHistory.length > 0">
                 
                     <h2>{{htitle}}</h2>
