--- a/public/app/partials/top-menu.html
+++ b/public/app/partials/top-menu.html
@@ -21,7 +21,7 @@
                         <li ng-class="{ active: isActive('/mystores/{{userId}}')}"><a href="#mystores/{{userId}}">{{TopMenuCaptions[0].description}}</a></li>
                         <li ng-class="{ active: isActive('/wopportunity')}"><a href="#wopportunity">{{TopMenuCaptions[2].description}}</a>
                         </li>
-                        <li><a href="#login" ng-hide="loggedIn" class="btn btn-primary col-md-9 col-xs-3" id="btn-login">{{TopMenuCaptions[3].description}}</a></li>
+                        <li><a href="#login" ng-hide="loggedIn" class="btn btn-primary col-sm-9 col-md-9 col-xs-3" id="btn-login">{{TopMenuCaptions[3].description}}</a></li>
                         <li class="dropdown" ng-show="loggedIn">
                             <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                                 <img class="img-circle" width="32" height="32" ng-src="{{profileImage}}"
