Product expire-package date saved in database
Fixed issues in saving product expiry and package date saving in
database

--- a/public/app/partials/evezplace/manage/store/product_catalogue.html
+++ b/public/app/partials/evezplace/manage/store/product_catalogue.html
@@ -235,7 +235,7 @@
                                 <!--</div>-->
                                 <div class="col-md-6">
                                     <input date-range-picker
-                                           options="{format: 'MMM/DD/YYYY', timePicker: true, timePickerIncrement: 30}"
+                                           options="{format: 'MMM/DD/YYYY', timePicker: false}"
                                            id="productExpiry" class="form-control date-picker"
                                            type="text"
                                            ng-model="productSKU.productExpiry"
@@ -438,7 +438,7 @@
                                     <!--</div>-->
                                     <div class="col-md-6">
                                         <input date-range-picker
-                                               options="{format: 'MMM/DD/YYYY', timePicker: true, timePickerIncrement: 30}"
+                                               options="{format: 'MMM/DD/YYYY', timePicker: false}"
                                                id="productExpiry" class="form-control date-picker"
                                                type="text"
                                                ng-model="product.productExpiry"
